feat: added balance and currency for main screen
