# src/shared/api/system.ts
@@ -11,3 +11,21 @@ export async function getSystemByName(systemName: string) {
     }
   }));
 }
+
+export async function getSystemById(systemId: string) {
+  return await throwAnyErrors(GET("/system/{id}", {
+    params: {
+      path: {
+        id: systemId
+      }
+    }
+  }));
+}
+
+export async function getBalance(token: string) {
+  return await throwAnyErrors(GET("/balance", {
+    headers: {
+      "Authorization": "Bearer " + token
+    }
+  }));
+}
